--- a/assignment1.html
+++ b/assignment1.html
@@ -32,7 +32,7 @@
         <header>
 <h2>contact details</h2>
                 <a href="addankigruhapoojitha000@gmail.com" class="btn">email</a>
-                <a href="https://www.instagram.com/invites/contact/?i=40bgcazkcyzp&utm_content=l5lexp0" class="btn">instagram</a>
+                <a href="#" class="btn">instagram</a>
                 <a href="https://www.linkedin.com/in/gruhapoojitha-addanki-258526268" class="btn">linkedin</a>
                 <a href="https://github.com/Gruhapoojitha" class="btn">github</a>
                 </div> 
